# software

./: .gitignore  .gitmodules  LICENSE  README.md  ament_code_style.cfg  c_cpp_properties.json  commands.sh  flake.nix  install_dependencies.bash
ateam_ai/: CMakeLists.txt  package.xml
ateam_ai/src/: ateam_ai_node.cpp  behavior.hpp  behavior_evaluator.hpp  behavior_execution.hpp  behavior_executor.hpp  behavior_feedback.hpp  behavior_realization.hpp  directed_graph.hpp
ateam_autoref_bridge/: CMakeLists.txt  package.xml
ateam_autoref_bridge/proto/: CMakeLists.txt
ateam_autoref_bridge/src/: autoref_bridge_node.cpp  message_conversions.cpp  message_conversions.hpp  referee_multicast_bridge.cpp  referee_multicast_bridge.hpp  team_client.cpp  team_client.hpp  team_client_node.cpp
ateam_bangbang/: CMakeLists.txt  package.xml
ateam_bangbang/src/: bangbang_node.cpp
ateam_common/: CMakeLists.txt  package.xml
ateam_common/scripts/: bag_to_csv.py
ateam_common/src/: assignment.cpp  bb_assignment.cpp  bi_directional_udp.cpp  cache_directory.cpp  game_controller_listener.cpp  game_state_listener.cpp  get_ip_addresses.cpp  hungarian.cpp  km_assignment.cpp  multicast_receiver.cpp  multicast_sender.cpp  parameters.cpp  status.cpp  team_color_listener.cpp  team_info_listener.cpp  time.cpp  udp_sender.cpp
ateam_common/test/: CMakeLists.txt  test_angle.cpp  test_assignment.cpp  test_km_assignment.cpp  test_logging.cpp  test_parameters.cpp  test_protobuf_logging.cpp  test_robot_assignment.cpp  test_status.cpp
ateam_cuda/: CMakeLists.txt  package.xml
ateam_cuda/src/: distance_ops.cu  world_utils.cu
ateam_cuda/test/: CMakeLists.txt  distance_test.cpp
ateam_data_conversion/: CMakeLists.txt  package.xml
ateam_data_conversion/src/: ssl_log_reader.cpp  ssl_log_replayer.cpp  ssl_log_replayer_node.cpp  ssl_to_rosbag.cpp  ssl_to_rosbag_cli.cpp  ssl_to_rosbag_node.cpp  ssl_vision_adapter.cpp
ateam_dummy_ai/: CMakeLists.txt  package.xml
ateam_dummy_ai/src/: follow_ball_node.cpp
ateam_field_geometry_republisher/: CMakeLists.txt  package.xml
ateam_field_geometry_republisher/src/: ateam_field_geometry_republisher_node.cpp
ateam_field_manager/: CMakeLists.txt
ateam_field_manager/src/: ateam_field_manager_node.cpp  message_conversions.cpp  message_conversions.hpp
ateam_game_controller_bridge/: CMakeLists.txt  package.xml
ateam_game_controller_bridge/src/: gc_multicast_bridge_node.cpp  message_conversions.cpp  message_conversions.hpp  team_client.cpp  team_client.hpp  team_client_node.cpp
ateam_geometry/: CMakeLists.txt  README.md  arc.cpp  line.cpp  package.xml  rectangle.cpp  segment.cpp  utilities.cpp
ateam_geometry/cmake/: ateam_geometry-extras.cmake
ateam_geometry/src/: circle.cpp  do_intersect.cpp  eigen_conversions.cpp  intersection.cpp  nearest_point.cpp  rectangle.cpp  segment.cpp  utilities.cpp
ateam_geometry/test/: CMakeLists.txt  angles_test.cpp  arc_test.cpp  do_intersect_test.cpp  intersection_test.cpp  nearest_point_test.cpp  nearest_points_test.cpp  normalize_test.cpp  test_segment.cpp  test_utilities.cpp  testing_utils_test.cpp  variant_do_intersect_test.cpp
ateam_joystick_control/: CMakeLists.txt  package.xml
ateam_joystick_control/config/: common_params.yaml  xbox_joy_config.yaml
ateam_joystick_control/launch/: joystick_controller.launch.xml
ateam_joystick_control/src/: joystick_control_node.cpp
ateam_kenobi/: CMakeLists.txt  package.xml
ateam_kenobi/src/: ballsense_emulator.hpp  defense_area_enforcement.cpp  defense_area_enforcement.hpp  double_touch_eval.hpp  in_play_eval.cpp  in_play_eval.hpp  joystick_enforcer.cpp  joystick_enforcer.hpp  kenobi_node.cpp  play_selector.cpp  play_selector.hpp  robot_assignment.hpp  singleton_node.cpp  singleton_node.hpp
ateam_kenobi/test/: CMakeLists.txt  greedy_assignment_test.cpp  path_planner_test.cpp  random_path_planner_test.cpp  robot_assignment_test.cpp  window_evaluation_test.cpp
ateam_msgs/: CMakeLists.txt  package.xml
ateam_msgs/msg/: BallState.msg  BehaviorExecutorState.msg  FieldInfo.msg  FieldSidedInfo.msg  GameStateBall.msg  GameStateRobot.msg  GameStateWorld.msg  JoystickControlStatus.msg  KenobiStatus.msg  Mesh1d.msg  Overlay.msg  OverlayArray.msg  PlaybookState.msg  RefereeInfo.msg  RobotCommands.msg  RobotFeedback.msg  RobotMotionCommand.msg  RobotMotionFeedback.msg  RobotMotorFeedback.msg  RobotState.msg  Sample3d.msg  Trajectory.msg  VisionCameraState.msg  VisionIMMState.msg  VisionMHTState.msg  VisionModelState.msg  VisionStateBall.msg  VisionStateCamera.msg  VisionStateCameraArray.msg  VisionStateIMM.msg  VisionStateMHT.msg  VisionStateModel.msg  VisionStateRobot.msg  VisionWorldState.msg  World.msg
ateam_msgs/srv/: ExportPlaybook.srv  GetFirmwareParameter.srv  GetPlayNames.srv  ImportPlaybook.srv  SendSimulatorControlPacket.srv  SetDesiredKeeper.srv  SetFirmwareParameter.srv  SetIgnoreFieldSide.srv  SetOverridePlay.srv  SetPlayEnabled.srv  SubstituteBot.srv
ateam_radio_bridge/: CMakeLists.txt  package.xml
ateam_radio_bridge/src/: conversion.cpp  conversion.hpp  firmware_parameter_server.cpp  firmware_parameter_server.hpp  ip_address_helpers.cpp  ip_address_helpers.hpp  radio_bridge_node.cpp  rnp_packet_helpers.cpp  rnp_packet_helpers.hpp
ateam_radio_bridge/test/: CMakeLists.txt  mock_robot.py
ateam_spatial/: CMakeLists.txt  package.xml
ateam_spatial/src/: device_availability.cu  layers.cu  min_max_loc_kernel.cu  placeholder.cpp  placeholder_cuda.cu  render_kernel.cu  spatial_evaluator.cu  update_maps_kernel.cu
ateam_spatial/test/: CMakeLists.txt  coordinate_conversions_tests.cpp  gpu_array_tests.cpp  gpu_multibuffer_tests.cpp  gpu_object_tests.cpp  gpu_vector_tests.cpp  layers_tests.cpp  maps_tests.cpp  min_max_loc_kernel_tests.cu  (+2 more)
ateam_ssl_vision_bridge/: CMakeLists.txt  package.xml
ateam_ui/: CMakeLists.txt  CopySrc.cmake  README.md  build.sh  install_deps.sh  package-lock.json  package.xml
ateam_vision_filter/: CMakeLists.txt  package.xml
new_super_vision_filter/: CMakeLists.txt  package.xml
ssl_league_protobufs/: CMakeLists.txt  package.xml
(+1071 files in other folders)
