<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ateam_ai</name>
  <version>0.0.0</version>
  <description>A Team AI module.</description>
  <maintainer email="fcdneiger@gmail.com">Joseph Neiger</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ateam_common</depend>
  <depend>ateam_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>angles</depend>
  <depend>ompl</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
