<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ateam_bangbang</name>
  <version>0.0.0</version>
  <description>Node to test bang bang trajectories</description>
  <maintainer email="nwitt12@gmail.com">Nicholas Witten</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ateam_msgs</depend>
  <depend>ateam_radio_msgs</depend>
  <depend>ateam_common</depend>
  <depend>ateam_game_state</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ateam_geometry</depend>
  <depend>control_toolbox</depend>
  <depend>ompl</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>angles</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>