<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ateam_joystick_control</name>
  <version>0.0.0</version>
  <description>Tools and config for A-Team joystick control</description>
  <maintainer email="matthew.barulic@gmail.com">Matthew Barulic</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>ateam_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
